1999-10-31  Akim Demaille  <akim@epita.fr>

	* autoheader.m4 (AH_TEMPLATE): Quote $2 once, now _AC_SH_QUOTE
	behaves properly.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CONFIG_LINKS): Allow a second argument,
	commands to run, as AC_CONFIG_FILES and HEADERS.
	(AC_LIST_LINKS_COMMANDS): New growing string.  Initialize.
	(AC_OUTPUT_LINKS): Use it.
	(AC_OUTPUT_FILES, AC_OUTPUT_HEADERS, AC_OUTPUT_LINKS): Don't
	pretend to have arguments: you don't depend upon it.
	(AC_OUTPUT): Call the previous macros without arguments.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_PREFIX_PROGRAM): Don't use define/undefine, but
	pushdef/podef.  AC_UPCASE_NAME no longer exist.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* TODO: Updated.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Clean up dead comments/code.  Clean up the incompatibilities
	between quoted and non quoted _AC_ECHO and the like.

	* acgeneral.m4: Remove the comments on the no longer defined AC_TR.
	(_AC_SH_QUOTE): Be robust to active symbols.
	(_AC_ECHO): Quote properly the argument.
	(AC_TRY_RUN): Don't quote [AC_TRY_RUN] in the warning.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acspecific.m4: Formatting changes.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_NOTICE, AC_INIT_PREPARE, AC_ARG_ENABLE,
	AC_ARG_WITH, AC, TRY_COMPILER, AC_TRY_RUN, AC_TRY_CPP,
	AC_EGREP_CPP): Use @PND@ instead of [#]: it looses the editors
	that try to match the pairs of (), [] etc.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Fix the compatibility of the compiling macros with C++.

	* acgeneral.m4 (AC_TRY_COMPILE, AC_TRY_LINK, AC_CHECK_SIZEOF): Use
	`int main () {...}', instead of `main () {...}'.
	* acspecific.m4 (AC_TYPE_GETGROUPS, AC_FUNC_CLOSEDIR_VOID,